# CCCB

./: .gitignore  README.md  pyproject.toml
cccb/: __init__.py  __main__.py  app.py  cccb.tcss  checker.py  executor.py  isolation.py  judge.py  models.py  runner.py  scorer.py
cccb/screens/: __init__.py  config_select.py  results.py  running.py  task_select.py
docs/images/fixtures/config-alpha/: CLAUDE.md  config.yaml
docs/images/fixtures/config-beta/: CLAUDE.md  config.yaml
docs/superpowers/plans/: 2026-03-31-cccb-implementation.md
docs/superpowers/specs/: 2026-03-30-cccb-design.md
scripts/: capture_tui_screenshots.py
tasks/codegen/: cli-parser.yaml  rest-api.yaml
tasks/debugging/: memory-leak.yaml  race-condition.yaml
tasks/fixtures/god-object/: app.py  test_app.py
tasks/fixtures/memory-leak/: server.py
tasks/fixtures/race-condition/: counter.py
tasks/fixtures/sync-to-async/: fetcher.py  test_fetcher.py
tasks/refactoring/: async-migration.yaml  extract-class.yaml
tests/: conftest.py  test_app_smoke.py  test_checker.py  test_executor.py  test_integration.py  test_isolation.py  test_judge.py  test_models.py  test_runner.py  test_scorer.py  test_task_filters.py
