[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cccb"
version = "0.1.0"
description = "Claude Code Config Benchmark — TUI tool to compare Claude Code configurations"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Lasse Siemoneit", email = "lasse.siemoneit@itsc.de" },
]
keywords = ["claude", "benchmark", "tui", "llm", "evaluation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: Textual",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "textual>=1.0.0",
    "pyyaml>=6.0",
    "claude-agent-sdk>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
]

[project.scripts]
cccb = "cccb.__main__:main"

[project.urls]
Homepage = "https://github.com/itsc-de/cccb"
Issues = "https://github.com/itsc-de/cccb/issues"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
